syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_datasource;

message DsDatasourceBean {

     int32  id=1 ;
     string name=2 ;
     optional string note=3 ;
     int32 DsDatasourceBean=4 ;
     int32 user_id=5 ;
     string connection_params=6 ;
     string create_time=7 ;
     optional string update_time=8 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsDatasourceBeanService {
  rpc ListDsDatasourceBeans(ListDsDatasourceBeansRequest) returns (ListDsDatasourceBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsDatasourceBeans"
    };
  }

  rpc GetDsDatasourceBean(GetDsDatasourceBeanRequest) returns (DsDatasourceBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsDatasourceBeans/*}"
    };
  }

  rpc CreateDsDatasourceBean(CreateDsDatasourceBeanRequest) returns (DsDatasourceBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsDatasourceBeans"
      body: "DsDatasourceBean"
    };
  }

  rpc UpdateDsDatasourceBean(UpdateDsDatasourceBeanRequest) returns (DsDatasourceBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsDatasourceBean.name=DsDatasourceBeans/*}"
      body: "DsDatasourceBean"
    };
  }

  rpc DeleteDsDatasourceBean(DeleteDsDatasourceBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsDatasourceBeans/*}"
    };
  }
}

// message DsDatasourceBean {
// ! This should be defined elsewhere
// }

message ListDsDatasourceBeansRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsDatasourceBeansResponse {
  // The field name should match the noun "DsDatasourceBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsDatasourceBean DsDatasourceBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsDatasourceBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsDatasourceBeanRequest {
  // The parent resource name where the DsDatasourceBean is to be created.
  string parent = 1;

  // The DsDatasourceBean id to use for this DsDatasourceBean.
  string DsDatasourceBean_id = 2;

  // The DsDatasourceBean resource to create.
  // The field name should match the Noun in the method name.
  DsDatasourceBean DsDatasourceBean = 3;
}

message UpdateDsDatasourceBeanRequest {
  // The DsDatasourceBean resource which replaces the resource on the server.
  DsDatasourceBean DsDatasourceBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsDatasourceBeanRequest {
  // The resource name of the DsDatasourceBean to be deleted.
  string name = 1;
}
